<resources>
    <string name="app_name">Mobile Rewards</string>
    <string name="email">Email</string>
    <string name="firstname">Firstname</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="activation_code">Activation Code</string>
    <string name="operator">Operator</string>
    <string name="register_now">Register Now</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="network">What mobile network are you on?</string>
    <string name="terms"><![CDATA[Terms & Condition]]></string>
    <string name="monthly">Monthly</string>
    <string name="payg">PAYG</string>
    <string name="registered_mobile_number">Registered Mobile Number</string>
    <string name="pay_monthly">Pay Monthly</string>
    <string name="payg_sim">PAYG sim</string>
    <string name="update">Update</string>
    <string name="cancel">cancel</string>
    <string name="mobile_reward_condition">I agree to Mobile Rewards service agreement</string>
    <string name="validation_code">Validation code</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sms_plan_sentance">Do you have unlimited SMS plan?</string>
    <string name="not_mandatory">Not Mandatory</string>
    <string name="billing_date">Your Billing Date if know</string>
    <string name="sim_plan">Do you have Pay Monthly or PAYG sim?</string>
    <string name="activation_registered_with">Activation Registered with</string>
    <string name="reward_status">Monthly \n Reward Status</string>
    <string name="share_now">Share Now</string>
    <string name="share_with_a_friend">Share with a friend</string>
    <string name="mobile_reward">MOBILE\nREWARDS</string>
    <string name="login_now">Login Now</string>

    <string name="date_prompt">Choose a billing Date</string>
    <string-array name="date_arrays">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>


</resources>
