<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/myprofile_background"
    android:padding="8dp"
    android:id="@+id/root"
    tools:context=".activity.MyProfileActivity">

    <RelativeLayout
        android:id="@+id/llToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/back_button"
            android:padding="6dp" />

        <TextView
            android:id="@+id/txtHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="My Profile"
            android:fontFamily="@font/arial_rounded"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/llToolbar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/llMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/arial_rounded"
                    android:text="@string/registered_mobile_number"
                    android:textColor="@color/material_light_blue_500"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtMobileNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/arial_rounded"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llNetwork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="2">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="2"
                    android:fontFamily="@font/arial_rounded"
                    android:text="@string/network"
                    android:textColor="@color/material_light_blue_500"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@color/material_light_blue_500"
                android:padding="2dp"
                android:spinnerMode="dropdown" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="60dp"
                android:background="@color/material_grey_500" />

            <LinearLayout
                android:id="@+id/llPayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="2">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="2"
                    android:fontFamily="@font/arial_rounded"
                    android:text="@string/sim_plan"
                    android:textColor="@color/material_light_blue_500"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/rgMontlyopt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioMonthly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/arial_rounded"
                        android:text="@string/pay_monthly"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radioPayg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/arial_rounded"

                        android:text="@string/payg_sim"
                        android:textSize="18sp" />
                </RadioGroup>

            </LinearLayout>

            <!--<LinearLayout
                android:id="@+id/llBillingDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="2">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="2"
                    android:text="@string/billing_date"
                    android:textColor="@color/material_light_blue_500"
                    android:textSize="18sp"
                    android:fontFamily="@font/arial_rounded"
                    android:textStyle="bold" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/spDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="40dp"
                    android:backgroundTint="@color/material_light_blue_500"
                    android:padding="2dp"
                    android:spinnerMode="dropdown"
                    android:entries="@array/date_arrays"
                    android:prompt="@string/date_prompt"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="60dp"
                    android:layout_below="@+id/spDate"
                    android:background="@color/material_grey_500" />
            </RelativeLayout>-->

            <LinearLayout
                android:id="@+id/llPlans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="2">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="2"
                    android:fontFamily="@font/arial_rounded"
                    android:text="@string/sms_plan_sentance"
                    android:textColor="@color/material_light_blue_500"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="40dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/rgSmsplan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/arial_rounded"
                        android:text="@string/yes"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radioNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:fontFamily="@font/arial_rounded"
                        android:text="@string/no"
                        android:textSize="18sp" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llValidationcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/arial_rounded"
                    android:text="@string/activation_registered_with"
                    android:textColor="@color/material_light_blue_500"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtValidationCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/arial_rounded"
                    android:text="82914AKQW50019"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="2">


                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_cancel"
                    android:fontFamily="@font/arial_rounded"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/buttonColor"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/button_register"
                    android:fontFamily="@font/arial_rounded"
                    android:text="@string/update"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:visibility="visible" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
