<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<android.support.v7.widget.CardView android:id="@+id/cardView"
    android:layout_margin="10dp"
    app:cardCornerRadius="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp">

            <LinearLayout
                android:id="@+id/llMobile"
                android:layout_marginTop="4dp"
                android:weightSum="2"
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:text="1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:background="@drawable/blue_circle_icon"
                    android:textColor="@color/white"
                    android:fontFamily="@font/arial_rounded"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_weight="1.8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_number"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/arial_rounded"
                    android:textColor="@color/material_light_blue_500"
                    android:textSize="18sp"/>
            </LinearLayout>

            <EditText
                android:id="@+id/etMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text=""
                android:maxLength="10"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:digits="0123456789"
                android:fontFamily="@font/arial_rounded"
                android:inputType="phone"/>

            <LinearLayout
                android:id="@+id/llNetwork"
                android:layout_marginTop="4dp"
                android:weightSum="2"
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:text="2"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:background="@drawable/blue_circle_icon"
                    android:textColor="@color/white"
                    android:fontFamily="@font/arial_rounded"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_weight="1.8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/network"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/arial_rounded"
                    android:textColor="@color/material_light_blue_500"
                    android:textSize="18sp"/>
            </LinearLayout>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/material_light_blue_500"
                    android:padding="2dp"
                    android:spinnerMode="dropdown"/>

                <View
                    android:layout_width="match_parent"
                    android:background="@color/material_grey_500"
                    android:layout_height="1dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"/>

            <LinearLayout
                android:id="@+id/llPayment"
                android:layout_marginTop="4dp"
                android:weightSum="2"
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:text="3"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:background="@drawable/blue_circle_icon"
                    android:textColor="@color/white"
                    android:fontFamily="@font/arial_rounded"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_weight="1.8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sim_plan"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/arial_rounded"
                    android:textColor="@color/material_light_blue_500"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                >

                <RadioGroup
                    android:id="@+id/rgMontlyopt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioMonthly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monthly"
                        android:fontFamily="@font/arial_rounded"
                        android:textSize="18sp"/>

                    <RadioButton
                        android:id="@+id/radioPayg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/payg"
                        android:fontFamily="@font/arial_rounded"
                        android:layout_marginStart="30dp"
                        android:textSize="18sp"/>
                </RadioGroup>

                <!--<CheckBox
                    android:id="@+id/chMonthly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monthly"
                    android:textColor="@color/black"
                    />

                <CheckBox
                    android:id="@+id/chPayg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payg"
                    android:textColor="@color/black"
                    android:checked="false"
                    android:layout_marginStart="20dp"
                    />-->
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llBillingDate"
                android:layout_marginTop="4dp"
                android:weightSum="2"
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:text="4"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:background="@drawable/blue_circle_icon"
                    android:textColor="@color/white"
                    android:fontFamily="@font/arial_rounded"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_weight="1.8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/billing_date"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/arial_rounded"
                    android:textColor="@color/material_light_blue_500"
                    android:textSize="18sp"/>

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_mandatory"
                android:textStyle="bold"
                android:layout_marginStart="50dp"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/arial_rounded"
                android:textSize="12sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etDate"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text=""
                    android:fontFamily="@font/arial_rounded"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="60dp"/>

                <ImageView
                    android:id="@+id/imgDate"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/calendar"/>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/llPlans"
                android:layout_marginTop="4dp"
                android:weightSum="2"
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:text="5"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:background="@drawable/blue_circle_icon"
                    android:textColor="@color/white"
                    android:fontFamily="@font/arial_rounded"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_weight="1.8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sms_plan_sentance"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/arial_rounded"
                    android:textColor="@color/material_light_blue_500"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                >

                <RadioGroup
                    android:id="@+id/rgSmsplan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes"
                        android:fontFamily="@font/arial_rounded"
                        android:textSize="18sp"/>

                    <RadioButton
                        android:id="@+id/radioNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no"
                        android:fontFamily="@font/arial_rounded"
                        android:layout_marginStart="30dp"
                        android:textSize="18sp"/>
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llValidationcode"
                android:weightSum="2"
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_weight="0.25"
                    android:layout_width="0dp"
                    android:text="6"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:background="@drawable/blue_circle_icon"
                    android:textColor="@color/white"
                    android:fontFamily="@font/arial_rounded"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/validation_code"
                    android:textStyle="bold"
                    android:textColor="@color/material_light_blue_500"
                    android:layout_marginStart="8dp"
                    android:textSize="18sp"
                    android:fontFamily="@font/arial_rounded"
                    />


                <EditText
                    android:id="@+id/etValidationCode"
                    android:layout_weight="0.8"
                    android:layout_marginEnd="40dp"
                    android:layout_width="0dp"
                    android:inputType="textPassword"
                    android:fontFamily="@font/arial_rounded"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llMobilereward"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="6dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgMobilereward"
                    android:layout_width="40dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:background="@drawable/reward_select"
                    android:layout_height="40dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_reward_condition"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginStart="6dp"
                    android:fontFamily="@font/arial_rounded"
                    android:textSize="18sp"/>

            </LinearLayout>
        </LinearLayout>
</android.support.v7.widget.CardView>
</ScrollView>